# procesamiento_imagenes_medicas

./: .gitignore  README.md
02-intro-ITK-codigo/: example_itk_library.ipynb
02-intro-ITK-codigo/C++/: 00_arguments.cxx  01_io.cxx  02_multi_io.cxx  03_circle.cxx  CMakeLists.txt
02-intro-ITK-codigo/Python/: 00_arguments.py  01_io.py  02_multi_io.py  03_circle.py
03_itksnap-data/: Untitled.txt  anat_labels.txt
proyecto_glucoma/: 00_general_information_data.ipynb
taller2_Fourier-ITK/: FilterimagenInFurierDomain.ipynb  imageFurierTransform.ipynb
taller2_Fourier-ITK/C++/: CMakeLists.txt
taller2_Fourier-ITK/Python/: FilterImageInFourierDomain.py  ImageFourierTransform.py
taller_1/: taller_1.ipynb
taller_1/ct_data/series-00000/: image-00000.dcm  image-00001.dcm
taller_1/ct_data/series-00001/: image-00000.dcm  image-00001.dcm  image-00002.dcm  image-00003.dcm  image-00004.dcm  image-00005.dcm  image-00006.dcm  image-00007.dcm  image-00008.dcm  image-00009.dcm  image-00010.dcm  image-00011.dcm  image-00012.dcm  image-00013.dcm  image-00014.dcm  image-00015.dcm  image-00016.dcm  image-00017.dcm  image-00018.dcm  image-00019.dcm  image-00020.dcm  (+246 more)
taller_1/us_data/: image-00000.dcm  image-00001.dcm  image-00002.dcm  image-00003.dcm  image-00004.dcm  image-00005.dcm  image-00006.dcm  image-00007.dcm  image-00008.dcm  image-00009.dcm  image-00010.dcm  image-00011.dcm  image-00012.dcm  image-00013.dcm  image-00014.dcm  image-00015.dcm  image-00016.dcm
taller_3_filtrado_papper/: median_adaptive_filter.py  median_filter.py  papper_interpretation.ipynb  result.ipynb
taller_3_filtrado_papper/entrega_manuel_jesus/: filtro_weine.py  median_adaptive_filter.py
taller_4_umbrales_ITK/C++/: CMakeLists.txt  HuangThresholding.cxx  OtsuThresholding.cxx  TriangleThresholding.cxx
taller_4_umbrales_ITK/Python/: HuangThresholding.py  OtsuThresholding.py  TriangleThresholding.py
(+871 files in other folders)
